Make AudioBuffers Detachable

Make AudioBuffers detachable and allow AudioBufferSourceNode to
acquire the contents as required by the WebAudio spec.

Bug: 763038
Test:
Change-Id: Ife18364bd213f6c8a60fccf329886fe135c3e5a4